new file:   _includes/carousel.html 	modified:   _layouts/about.liquid 	modified:   _pages/about.md

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -78,3 +78,7 @@ layout: default
     {% endif %}
   </article>
 </div>
+  {% include carousel.html height="50" unit="%" duration="7" number="1" %}
+
+  {% include carousel.html height="50" unit="%" duration="7" number="2" %}
+
